gitops/apps/targeting-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: targeting-service
  name: targeting-service
  namespace: targeting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service
  strategy: {}
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      serviceAccountName: targeting-service
      containers:
      - name: targeting-service
        image: 056007986659.dkr.ecr.us-east-1.amazonaws.com/fiap-fase2/targeting-service:1.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8003
        volumeMounts:
        - name: secrets-store-inline
          mountPath: /mnt/secrets-store
          readOnly: true
        readinessProbe:
          httpGet:
            path: /targeting/health
            port: 8003
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /targeting/health
            port: 8003
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: targeting-service-secrets
